--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -49,18 +49,145 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html, body {
     height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+	font-family: 'Titillium Web', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
-    margin-bottom: 15px;
+	
 }
 
 /* Your code starts here! */
+
+/* Navigation Content */
+.navigation {
+	color: grey;
+	width: 75%;
+	margin: 0 auto;
+}
+
+.navigation li {
+	display: inline-block;
+	margin: 2%;
+}
+
+#circlelogo {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 15%;
+	margin-right: 15%;
+}
+/* ------------------------------------------------- */
+
+/* Jumbotron Content */
+.jumbotron {
+	width: 75%;
+	margin: 0 auto;
+	
+}
+
+.jumbotron h1 {
+	font-size: 60px;
+	text-align: center;
+}
+
+.jumbotron-content {
+	display: inline-block;
+	width: 35%;
+	/* margin: 2%; */
+	
+}
+
+.jumbotron-content .btn {
+	margin-left: 38%;
+	
+	
+}
+
+  .header-img {
+	margin-left: 10%px;
+	
+}
+
+#title {
+	margin-bottom: 20%;
+}
+
+/* ------------------------------------------------- */
+
+
+/* Contents Content (lol) */
+.top-content {
+	
+	margin: 0 auto;
+	width: 75%;
+  }
+
+  .bottom-content {
+	
+	margin: 0 auto;
+	width: 75%;
+  }
+  .content {
+	width: 37.5%;
+	display: inline-block;
+	margin: 20px;
+	
+  }
+
+  .section2 {
+	width: 30%;
+  	display: inline-block;
+  	margin: 1%;
+  	
+  }
+/* ------------------------------------------------- */
+
+.btn {
+	border: 2px solid black;
+	background-color: white;
+	color: black;
+	padding: 14px 28px;
+	font-size: 16px;
+	cursor: pointer;
+	margin-bottom: 15%;
+}
+
+.default {
+	border-color:black;
+	color: black;
+}
+
+.default:hover {
+	background: #e7e7e7;
+}
+
+.center_image .middle-img {
+	width: 75%;
+	display: inline-block;
+	margin-left: 12.5%;
+	
+}
+
+.contact {
+	width: 75%;
+	margin: 0 auto;
+	
+}
+
+.linebreak {
+	border-bottom: solid 3px #000;
+	width: 75%;
+	margin-left: 12.5%;
+	margin-bottom: 1.5%;
+}
+
+footer {
+	text-align: center;
+}
